# Manitto

./: .gitignore  LICENSE  README.md
mani/: pyproject.toml  test.py
mani/Code/: ManittoDashobard.py
mani/Data/: betadata_122523.csv
