[tool.poetry]
name = "mani"
version = "0.1.0"
description = ""
authors = ["Da-Woon Kim <wise_head@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.14.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
